<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".view.Cadastro">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="167dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cadastro_img_top" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_right_arrow" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cadastro"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textview9"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textview9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/preenha_seus_dados_para_fazer_o_ncadastro_e_come_ar_a_usar_o_app"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/btn_cad"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:contentDescription="@string/todo"
        android:onClick="click_on_register"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
        app:srcCompat="@drawable/cadastro_btn" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_cad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_completo"
                android:textColor="#464646"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/ic_profile"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/jo_o_silva_nascimento"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textCursorDrawable="@null"
                android:theme="@style/AppTheme.Cursor" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail2"
                android:textColor="#464646"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/ic_envelope"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/exemplo_viveiro_com"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textCursorDrawable="@null"
                android:theme="@style/AppTheme.Cursor" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone"
                android:textColor="#464646"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/_00_00000_0000"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textAlignment="center"
                android:textCursorDrawable="@null"
                android:theme="@style/AppTheme.Cursor" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/senha2"
                android:textColor="#464646"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/ic_padlock"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/passHint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textCursorDrawable="@null"
                android:theme="@style/AppTheme.Cursor" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirme_a_senha"
                android:textColor="#464646"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/senha2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/ic_padlock"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/passHint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textCursorDrawable="@null"
                android:theme="@style/AppTheme.Cursor" />

            <TextView
                android:id="@+id/textEst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                android:textColor="#464646"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="16dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/estados"
                    app:layout_constraintEnd_toStartOf="@+id/estados"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/estados"
                    app:srcCompat="@drawable/ic_end" />

                <Spinner
                    android:id="@+id/estados"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cidade"
                android:textColor="#464646"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="16dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="@+id/cidades"
                    app:layout_constraintEnd_toStartOf="@+id/cidades"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/cidades"
                    app:srcCompat="@drawable/ic_end" />

                <Spinner
                    android:id="@+id/cidades"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="32dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/box_termos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/termos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/termos_de_uso"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/aceito"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/aceito"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/aceito"
                        android:textColor="#464646"
                        android:theme="@style/AppTheme.GreenCheck"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/termos"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/btn_txt_cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="click_on_register"
        android:text="@string/cadastrar"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cad"
        app:layout_constraintEnd_toEndOf="@+id/btn_cad"
        app:layout_constraintStart_toStartOf="@+id/btn_cad"
        app:layout_constraintTop_toTopOf="@+id/btn_cad" />
</androidx.constraintlayout.widget.ConstraintLayout>