<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_cross" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/termos_de_uso2"
        android:textColor="#454545"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:nestedScrollingEnabled="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical"
        android:text="O download e uso deste aplicativo pelo usuário implica no seu total e expresso consentimento para a coleta e tratamento de dados pessoais nos termos da Política de Privacidade."
        android:textColor="#454545"
        android:verticalScrollbarPosition="right"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnpolitica"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="8dp"
            android:text="@string/PoliticadePrivacidade"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#454545"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/terms"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eu_aceito"
            android:theme="@style/AppTheme.GreenCheck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnpolitica"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/prox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:longClickable="false"
        app:srcCompat="@drawable/btn_term_prox" />
</LinearLayout>